fixed case-sensitive img tags

--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@ The "Pando" colony in south-central Utah is estimated to be up to 80,000 years o
 					<div class="content box style2">
 						<div id="softwarelogos">
 							<ul id="softwarelogoslist">
-								<li><img src="images/softwarelogos/GitHub.png" alt="GitHub"></li>
-								<li><img src="images/softwarelogos/r.png" alt="R"></li>
+								<li><img src="images/softwarelogos/github.png" alt="GitHub"></li>
+								<li><img src="images/softwarelogos/R.png" alt="R"></li>
 								<li><img src="images/softwarelogos/shiny.png" alt="Shiny"></li>
 								<li><img src="images/softwarelogos/devtools.png" alt="devtools"></li>
 								<li><img src="images/softwarelogos/roxygen2.png" alt="roxygen2"></li>
@@ -612,8 +612,8 @@ The "Pando" colony in south-central Utah is estimated to be up to 80,000 years o
 				<div class="content box style2">
 					Being a gay man led me into working in EDI, and I've since become heavily invested
 					in changing systems which provide unequal opportunities and support for 
-					minority groups. Although I do my best to represent the interests of all 
-					those who are disadvantaged, I work especially for the interests of the LGBTQ+ 
+					minority groups. Although I do my best to stand up for the interests of all 
+					those who are disadvantaged, I work especially to represent the interests of the LGBTQ+ 
 					community, and those living with long-term mental health conditions.
 					<br><br>
 					In 2020 I was awarded the British Ecological Society's Equality and Diversity Champion award.
