--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="description" content="Iain Stott, computational ecologist">
+		<meta name="keywords" content="ecology, evolution, conservation, life history, population, demography, resilience, transient, dynamics, matrix, compadre, comadre, aging, ageing, whyage, urban, tree, forest, lincoln, exeter, max planck, rostock, germany, SDU, odense, denmark, R, package, programmer, programming, code, coding, mathematics, math, maths, equality, diversity, inclusion, british ecological society, BES, lecturer, senior lecturer, fellow">
+		<meta name="author" content="Iain Stott">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			  <link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="stylesheet" href="assets/css/nav.css" />
@@ -107,7 +111,7 @@
 							space.  I use real <a href="#data">DATA</a>, mathematical models, 
 							statistical analysis and novel <a href="#software">SOFTWARE</a>.
 							<br><br>
-							I'm a Lecturer in Ecology at the <a href="www.lincoln.ac.uk"  target = "_blank">University of Lincoln</a>
+							I'm a Senior Lecturer in Ecology at the <a href="www.lincoln.ac.uk"  target = "_blank">University of Lincoln</a>
 							in the UK, and have previously worked as a Marie Skłodowska-Curie Actions Research Fellow based at the 
 							<a href = "https://www.sdu.dk/en" target = "_blank">University of Southern Denmark</a>, 
 							the <a href = "www.demogr.mpg.de" target = "_blank"> Max Planck Institute of Demographic Research</a>
@@ -234,7 +238,7 @@ The "Pando" colony in south-central Utah is estimated to be up to 80,000 years o
 						</div>
 					</div>						
 					<div id="whyagepic">
-						<img src="images/whyagepic.png" />
+						<img src="images/whyagePic.png" />
 					</div>
 				</div>
 				<div id="whyagebody" class="content container 80%">
