tweaks to content order

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 									<li><a href="#one">DATA</a></li>
 									<li><a href="#software">SOFTWARE</a></li>
 									<li><a href="#softwarefooter">TEACHING</a></li>
-									<li><a href="#EandD">COMMUNITY</a></li>
-									<li><a href="#EandDfooter">CV</a></li>
+									<li><a href="#EandD">EDI</a></li>
 								</ul>
 							</div>
 				</div>
@@ -86,8 +85,7 @@
 								</a><a href="#one">DATA
 								</a><a href="#software">SOFTWARE
 								</a><a href="#teaching">TEACHING
-								</a><a href="#EandD">COMMUNITY
-								</a><a href="#CV">CV</a>
+								</a><a href="#EandD">EDI
 							</div>
 							<div id="linkmobile">
 								<a href="#research">RESEARCH
@@ -96,8 +94,7 @@
 								</a><a href="#one">DATA
 								</a><a href="#software">SOFTWARE
 								</a><a href="#softwarefooter">TEACHING
-								</a><a href="#EandD">COMMUNITY
-								</a><a href="#EandDfooter">CV</a>
+								</a><a href="#EandD">EDI
 							</div>	
 						</span>
 					</div>
@@ -335,14 +332,17 @@ The "Pando" colony in south-central Utah is estimated to be up to 80,000 years o
 						i-10 index: <span style = "font-weight: bold;">17</span>
 						<br>
 						(Source: Google Scholar, Feb 2021)
-						<br><br>
-						More info can be found on my <a href = "goo.gl/DjuUdu">Google Scholar</a> profile.
-						<br><br>
-						Publications notes:
+						<br>
+						Notes:
 						<br>
 						* indicates equal author contribution
 						<br>
 						† indicates prize-winning.
+						<br><br>
+						More info can be found on my <a href = "goo.gl/DjuUdu">Google Scholar</a> profile.
+						<br><br>
+						I'm an Associate Editor for the <a href="https://besjournals.onlinelibrary.wiley.com/journal/13652745" target= "_blank">Journal of Ecology</a>.
+						<br><br>
 					</div>
 						<div id = "pubslist">
 							Peer-reviewed publications
@@ -621,19 +621,19 @@ The "Pando" colony in south-central Utah is estimated to be up to 80,000 years o
 					community, and those living with long-term mental health conditions.
 					<br><br>
 					In 2020 I was awarded the British Ecological Society's Equality and Diversity Champion award.
+					<br><br>
+					I am a member of the <a href="https://www.britishecologicalsociety.org">British Ecological Society</a>'s
+					Equality and Diversity Working group, help run their LGBT+ network, and organise
+					LGBT+ articles for the quarterly members' magazine. I'm also on the EDI committees
+					of the University of Lincoln School of Life Sciences and College of Science.
 					<br>
-					<button onclick="toggleEDI()">Show / hide more information</button>
+				<button onclick="toggleEDI()">Show / hide more information</button>
 					<br><br>
 					<div id="EandDmore">
-						I am a member of the <a href="https://www.britishecologicalsociety.org">British Ecological Society</a>'s
-						Equality and Diversity Working group, help run their LGBT+ network, and organise
-						LGBT+ articles for the quarterly members' magazine. I'm also on the EDI committees
-						of the University of Lincoln School of Life Sciences and College of Science.
-						<br><br>
 						I previously sat on the Board of Trustees of the British Ecological Society, 
-						representing early career researchers and EDI interests. During this time 
-						I also sat on their Publications Committee, Education and Careers Committee and 
-						Membership Committee.
+						representing early career members of the society. During this time 
+						I also sat on the BES Publications Education and Careers, and 
+						Membership Committees.
 						<br><br>
 						Blog posts:
 						<ul>
