fixed navbar links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 								<li><a href="#software">SOFTWARE</a></li>
 								<li><a href="#softwarefooter">TEACHING</a></li>
 								<li><a href="#EandD">COMMUNITY</a></li>
-								<li><a href="#CV">CV</a></li>
 							</ul>
 							<ul id="menumobile">
 									<li><a href="#intro">HOME</a></li>
@@ -85,7 +84,7 @@
 								</a><a href="#one">DATA
 								</a><a href="#software">SOFTWARE
 								</a><a href="#teaching">TEACHING
-								</a><a href="#EandD">EDI
+								</a><a href="#EandD">EDI</a>
 							</div>
 							<div id="linkmobile">
 								<a href="#research">RESEARCH
@@ -94,7 +93,7 @@
 								</a><a href="#one">DATA
 								</a><a href="#software">SOFTWARE
 								</a><a href="#softwarefooter">TEACHING
-								</a><a href="#EandD">EDI
+								</a><a href="#EandD">EDI</a>
 							</div>	
 						</span>
 					</div>
@@ -113,7 +112,7 @@
 							<a href = "https://www.sdu.dk/en" target = "_blank">University of Southern Denmark</a>, 
 							the <a href = "www.demogr.mpg.de" target = "_blank"> Max Planck Institute of Demographic Research</a>
 							and the <a href = "https://www.exeter.ac.uk/cornwall/about/penryn-campus/" target = "_blank">University of Exeter (Cornwall Campus)</a>. 
-							<br><br>
+							<br>
 						</div>
 					</div>
 
